# Bing-Chat-API

./: README.md  pyproject.toml
src/bing_chat/: BingGPT.py
