[tool.poetry]
name = "bing-chat"
version = "1.9.5"
description = "Bing-Chat-API"
authors = ["Zack Bradshaw <zack@zackbradshaw.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "*"
BingImageCreator = "*"
certifi = "*"
httpx = "*"
prompt_toolkit = "*"
requests = "*"
rich = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.19.0"
pytest = "^7.4.4"

[tool.setuptools.packages.find]
where = ["src/"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bing-chat = "main:main"

[tool.poetry.urls]
"Bug Report" = "https://github.com/Agora-X/Bing-Chat-API/issues/new"
